* Rewrote the way dropdowns are shown in select boxes. Instead of being attached to the body, they're now physically where they're supposed to be. In order to avoid the classic issue of an absolutely-positioned dropdown being cut off by an 'overflow: hidden' element, I've used the technique I used in the menu code, which is apparently little known: setting no relatively positioned parent, and setting the top margin instead of the top position. instead avoiding to set a position on the absolutely positioned element. The element will be naturally positioned below its owner. The drop-up code is a bit buggy but I have no time to fix it tonight. (sbox.js, index.css, sections.css) - Removed the ctx option (because it's no longer useful), and the arrow option (because, well, WE won't change it anyway...) (sbox.js) ! Fixed an extra colon that broke JavaScript in IE7. (sbox.js) @ As a result, the final gzipped sbox file is a whopping 110+ byte smaller than in the previous revision! :)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1270,7 +1270,6 @@ dl#feed
 	font-family: arial
 	font-size: 1em
 	margin: 1px
-	position: relative
 
 	.display
 		background: #fff
@@ -1332,6 +1331,7 @@ dl#feed
 	margin: 0
 	overflow-x: hidden
 	overflow-y: auto
+	position: absolute
 	z-index: 999
 	box-shadow: 0 2px 5px rgba(0,0,0, .3)
 	padding: 2px
